--- a/CV.css
+++ b/CV.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Yomogi&display=swap');
+
+
 * {
     box-sizing: border-box;
   }
 
   div.Education:hover,.header:hover,.MilitaryService:hover,.Employment:hover,.PersonalProject:hover,.Skills:hover,.Languages:hover {
-    background-color: rgb(145, 145, 167);
+    background-image: url("back4.jpg");
+    /*transform: scale(1,1.05);*/
   }
 
   @font-face {
@@ -12,8 +16,9 @@
   }
 
   body {
-   font-family: HeeboFont;
-   background-image: url("backgroup1.jpg");
+   
+   background-image: url("back4.jpg");
+   font-family:'Yomogi', cursive;
   
   }
  
@@ -21,8 +26,10 @@
   
  h1{
      text-align: center;
-     font-size: 60px;
+     font-size: 70px;
      color: rgb(12, 11, 11);
+     font-weight: bold;
+     transition: all 4s ease-in-out;
  } 
 
 
@@ -30,13 +37,17 @@
   /* Style the header */
   .header {
     grid-area: header;
-    background-color: #f1f1f1;
-    padding: 0px;
+    background-color:rgba(255, 255,255, 0.2);
+    padding: 10px;
     text-align: center;
     font-size: 20px;
-    font-family:HeeboFont ;
-    border: solid;
+    /*font-family:HeeboFont ;*/
+    border: solid 2px;
+    font-style:oblique;
     font-weight: bold;
+    font-family: 'Yomogi', cursive;;
+    
+                    
     
   }
   
@@ -48,6 +59,7 @@
       'Education Education MilitaryService MilitaryService Employment Employment'
       'PersonalProject PersonalProject Skills Skills Languages Languages' 
       'contact contact contact contact contact contact';
+      
     /*grid-column-gap: 10px; /*- if you want gap between the columns*/ 
     
   } 
@@ -61,12 +73,14 @@
     padding: 10px;
     height: 200px; /* Should be removed. Only for demonstration */
     text-align: center;
-    border: solid;
-    font-family: HeeboFont;
+    border: solid 2px;
+    font-family: 'Yomogi', cursive;
     /*vertical-align: middle;
     line-height: 100px; */
     font-size: 20px;
-    font-style:oblique;
+    /*font-style:oblique;*/
+    background-color:rgba(255, 255,255, 0.2);
+    font-weight: bold;
   }
 
 
@@ -81,34 +95,34 @@
   .Education {
     grid-area: Education;
     place-items:center ;
-    background-color:#aaa;
+    
   }
   
   /* Style the middle column */
   .MilitaryService {
     grid-area: MilitaryService;
-    background-color:#bbb;
+    
   }
   
   /* Style the right column */
   .Employment {
     grid-area: Employment;
-    background-color:#ccc;
+    
   }
 
   .PersonalProject{
     grid-area: PersonalProject;
-    background-color:#ddd;
+    
   }
 
   .Skills{
     grid-area: Skills;
-    background-color:#eee;
+    
   }
 
   .Languages{
     grid-area: Languages;
-    background-color:#fff;
+    
   }
 
 
@@ -124,10 +138,11 @@
     background-size: cover;
     background-position:center;
     font-family: HeeboFont;
-    background-image: url("contact2.jpg");
+    /*background-image: url("contact2.jpg");*/
     /*margin-top: 10px;*/
-    text-transform: uppercase;
-    transition: all 4s ease-in-out;
+    /*text-transform: uppercase;*/
+    /*transition: all 4s ease-in-out;*/
+    border: solid 2px;
   }
   
 form{
@@ -139,8 +154,8 @@ form{
   background: transparent;
   border: none;
   outline: none;
-  border-bottom: 1px solid gray;
-  color:#fff;
+  border-bottom: 1px solid black;
+  color: black;
   font-size: 18px;
   margin-bottom: 16px;
 }
@@ -151,18 +166,71 @@ input{
 
 form .submit {
   margin-bottom: 20px;
-  background-color: rgb(145, 145, 167);
-  opacity: 0.6;
+  background-color: rgba(255, 255,255, 0.2);
+  /*opacity: 0.6;*/
   font-size: 20px;
   border-radius: 20px;
   letter-spacing: 2px;
   height: 50px;
+  border: solid ;
 }
 
 form .submit:hover{
-  opacity: 1;
+  background-color: rgba(255, 255,255, 0.4);
   cursor: pointer;
 }
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color:black;
+  opacity: 1; /* Firefox */
+}
+
+
+
+.line {
+  position: relative;
+  top: 8%;
+  width: 16em;
+  margin: 0 auto;
+  border-right: 2px solid rgba(10, 10, 10, 0.616);
+  font-size: 220%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  transform: translateY(-50%);
+  font-family: 'Anonymous Pro', monospace;
+  color:black;
+}
+
+.anim-typewriter {
+  animation: typewriter 4s steps(40) 4s 5 normal both,
+  blinkTextCursor 500ms steps(10)  infinite normal;
+  animation-direction: alternate;
+
+}
+
+@keyframes typewriter {
+  from {
+        width: 0;
+  }
+  to {
+        width: 7em;
+  }}
+
+@keyframes blinkTextCursor {
+  from {
+        border-right-color: rgba(14, 13, 13, 0.75);
+  }
+  to {
+        border-right-color: transparent;
+  }
+}
+
+
+
+
+
+
 
   
 
