--- a/or_ben-zikry_app/views/CV.html
+++ b/or_ben-zikry_app/views/CV.html
@@ -5,8 +5,8 @@
            Or Ben Zikry CV
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0,">
-        <link rel="stylesheet" href="/stylesheets/CV.css">
-        <script async src="/javascripts/cv.js"></script>
+        <link rel="stylesheet" href="./stylesheets/CV.css">
+        <script async src="./javascripts/cv.js"></script>
  
     </head>
 
@@ -16,26 +16,26 @@
 <div class="grid-container">
   <div class="header">
     About Me<br>
-    <img src="/images/About.png" alt="About logo">
+    <img src="./images/About.png" alt="About logo">
   </div>
   
   <div class="Education">Education<Br><Br>
-  <img src="/images/education3.png" alt="Education logo"></div>
+  <img src="./images/education3.png" alt="Education logo"></div>
 
   <div class="MilitaryService">Military Service<br><br>
-    <img src="/images/army.png" alt="Soldier logo"></div>  
+    <img src="./images/army.png" alt="Soldier logo"></div>  
 
   <div class="Employment">Employment<br><Br>
-    <img src="/images/employment.png" alt="Emloyment logo"></div>
+    <img src="./images/employment.png" alt="Emloyment logo"></div>
 
   <div class="PersonalProject">Personal Project<br><br>
-    <img src="/images/projects.png" alt="Project logo"></div>
+    <img src="./images/projects.png" alt="Project logo"></div>
 
   <div class="Skills">Skills<br><Br>
-    <img src="/images/skills.png" alt="Skills logo"></div>
+    <img src="./images/skills.png" alt="Skills logo"></div>
 
   <div class="Languages">Languages<br><Br>
-    <img src="/images/language2.png" alt="Languages logo">
+    <img src="./images/language2.png" alt="Languages logo">
   </div>
   
   <div class="Contact">
